--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "colegio-balam",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Wbarrios.github.io/colegio-balam/",
+  "homepage": "https://willybarrios.github.io/colegio-balam/",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
